next test to fix the problem with wrong colored inline code

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,11 @@ h4 {
 
 }
 
+code:not(.sourceCode) {
+  background-color: #f5f5f5 !important;
+  color: #890bb3 !important;
+}
+
 .header-section-number {
   color: #1a1919;
  }
